overlays/prod/ids/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ids-frontend
  template:
    metadata:
      labels:
        app: ids-frontend
    spec:
      containers:
        - name: api
          image: adhp/ids-frontend:zfw-main-267a56c
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 20m
              memory: 5Mi
            limits:
              cpu: 100m
              memory: 128Mi
