overlays/prod/ids/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ids-backend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 3000
  selector:
    app: ids-backend
